# pyhue2d

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODING_GUIDELINES.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg
.github/workflows/: ci.yml  publish.yml  release-please.yml
docs/: README.md
src/pyhue2d/: __init__.py  __main__.py  cli.py  core.py
src/pyhue2d/jabcode/: __init__.py  bitmap_renderer.py  cli_args.py  color_palette.py  constants.py  core.py  data_decoder.py  decoder.py  encoder.py  exceptions.py  image_exporter.py  image_format.py  jabcode_data_encoder.py  matrix_ops.py  module_data_extractor.py  multi_symbol.py  version_calculator.py
src/pyhue2d/jabcode/encoding_modes/: __init__.py  alphanumeric.py  base.py  byte.py  detector.py  lowercase.py  mixed.py  numeric.py  punctuation.py  uppercase.py
src/pyhue2d/jabcode/image_processing/: __init__.py  binarizer.py  finder_detector.py  perspective_transformer.py  symbol_sampler.py
src/pyhue2d/jabcode/ldpc/: __init__.py  codec.py  parameters.py  seed_config.py
src/pyhue2d/jabcode/patterns/: __init__.py  alignment.py  finder.py
src/pyhue2d/jabcode/pipeline/: __init__.py  encoding.py  processor.py
tests/: test_alignment_patterns.py  test_api.py  test_bitmap.py  test_bitmap_renderer.py  test_color_palette.py  test_data_processor.py  test_encoded_data.py  test_encoding_modes.py  test_encoding_pipeline.py  test_finder_pattern_detector.py  test_finder_patterns.py  test_image_exporter.py  test_jabcode_decoder.py  test_jabcode_encoder.py  test_ldpc_codec.py  test_ldpc_parameters.py  test_matrix_ops.py  test_multi_symbol_cascade.py  test_point2d.py  test_random_seed_config.py  test_reference_compatibility.py  test_rgb_channel_binarizer.py  test_round_trip.py  test_symbol.py  test_version_calculator.py
tests/benchmarks/: test_performance.py
tests/example_images/: debug_description.md  example1.png.json  example2.png.json  example3.png.json  example4.png.json  example5.png.json  examples_manifest.json  minimum_text.png.json  run_log.json
tests/integration/: test_reference_images.py
tests/test_vectors/: test_mode_vectors.py
tests/unit/: test_cli_args.py  test_exceptions.py  test_image_format.py
